[project]
name = "fantasy-hockey-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.29.0",
    "pyarrow>=21.0.0",
    "pyhockey>=0.1.7",
    "streamlit>=1.45.1",
    "streamlit-aggrid>=1.1.5.post1",
    "yahoo_fantasy_api==2.12.0",
    "yahoo_oauth==2.1.1",
    "unidecode==1.4.0"
]
